# MultiQueryAttention

./: README.md  flash_attn_triton.py  main.py  pyproject.toml  requirements.txt
mqa/: __init__.py  main.py
